force-app/main/default/objects/PoP_Response_e__e/PoP_Response_e__e.object-meta.xml
<CustomObject>
    <label>PoP Response</label>
    <pluralLabel>PoP Response</pluralLabel>
</CustomObject>