force-app/main/default/objects/PoP_Response_e__e/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <label>Contact Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>