force-app/main/default/objects/PoP_Response_e__e/fields/PoP_Id__c.field-meta.xml
<CustomField>
    <fullName>PoP_Id__c</fullName>
    <label>PoP Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>