force-app/main/default/objects/PoP_Response_e__e/fields/Property_Id__c.field-meta.xml
<CustomField>
    <fullName>Property_Id__c</fullName>
    <label>Property Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>