force-app/main/default/objects/PoP_Response_e__e/fields/Stop_Code__c.field-meta.xml
<CustomField>
    <fullName>Stop_Code__c</fullName>
    <label>Stop Code</label>
    <length>36</length>
    <type>Text</type>
</CustomField>